--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ serde_json = "1.0.140"
 clap = {version = "4.5.34", features = ["derive"]}
 solana-client = "2.2.6"
 solana-sdk = "2.2.2"
+logger = "0.4.0"
+env_logger = "0.11.8"
+log = "0.4"
+chrono = "0.4.40"
+reqwest = { version = "0.12.15", features = ["json"] }
+dotenv = "0.15.0"
+num-format = "0.4.4"
